--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-darwin-x64": "^4.9.2"
   }
 }
