--- a/lzc-build.yml
+++ b/lzc-build.yml
@@ -9,7 +9,7 @@ buildscript: sh build.sh
 manifest: ./lzc-manifest.yml
 
 # contentdir: 指定打包的内容，将会打包到 lpk 中
-contentdir: ./
+contentdir: ./dist
 
 # pkgout: lpk 包的输出路径
 pkgout: ./
